--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,24 @@
+/* width */
+/* ::-webkit-scrollbar {
+  width: 10px;
+} */
+
+/* Track */
+/* ::-webkit-scrollbar-track {
+  background: blue;
+} */
+
+/* Handle */
+/* ::-webkit-scrollbar-thumb {
+  background: red;
+} */
+
+/* Handle on hover */
+/* ::-webkit-scrollbar-thumb:hover {
+  background: green;
+} */
+
+
 /* start global rulse */
 * {
   -webkit-box-sizing: border-box;
@@ -16,6 +37,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: hsl(192, 100%, 9%);
+  overflow-x: hidden;
 }
 
 .flex {
@@ -83,6 +105,45 @@ h3 {
 
 /* end global rulse */
 
+/* start Animation */
+.fade-in {
+  opacity: 0;
+  transition: 350ms ease-in;
+}
+
+.fade-in.show {
+  opacity: 1;
+}
+
+.from-left,
+.from-right{
+  opacity: 0;
+  transition: 400ms ease-in;
+}
+
+.from-left {
+  transform: translateX(-100px);
+}
+
+.from-right {
+  transform: translateX(100px);
+}
+
+.from-left.show,
+.from-right.show {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.nav-scroll{
+  background: #F6FBFF ;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 11px;
+  transition: 500ms ease-in-out;
+  z-index: 9999;
+}
+
+/* end Animation */
+
 /* start landing */
 
 .landing {
@@ -90,7 +151,10 @@ h3 {
 }
 
 .landing .nav {
-  padding: 33px 0;
+  padding: 11px 33px;
+  margin-bottom: 22px;
+  position: fixed;
+  width: 100%;
 }
 
 .landing .nav button {
@@ -108,6 +172,11 @@ h3 {
 .landing .nav button:hover {
   background-color: hsl(321, 100%, 78%);
   color: #fff;
+}
+
+.landing h2{
+  padding-top: 88px;
+
 }
 
 .landing .nav img {
@@ -372,3 +441,8 @@ h3 {
 
 /* end footer */
 
+.attribution {
+  background-color: black;
+  color: #fff;
+  padding: 11px;
+}
